[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "isc-named"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"isc" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
